--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vorooooone.vorooooone">
 
+    <uses-feature android:name="android.hardware.usb.host"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Vorooooon."
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VorooooonActivity">
+        <activity android:name=".vorooooonMain.VorooooonActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
