--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "vorooooone.vorooooone"
-        minSdkVersion 16
+        minSdkVersion 16 //学校のタブレット基準
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
